<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pong</string>
    <string name="main_title">Android Pong</string>
    <string name="one_player_label">One player</string>
    <string name="two_players_label">Two players</string>
    <string name="no_players">No players</string>
    <string name="continue_label">Continue</string>
    <string name="exit_label">Exit</string>
    
    <string name="paused">P A U S E D</string>
    <string name="preferences">Preferences</string>
    
    <string name="new_game">New Game</string>
    <string name="green_wins">The Winner is Green!</string>
    <string name="blue_wins">The Winner is Blue!</string>
    
    <string name="join_in">Touch to join in!</string>
	<string name="pause">Pause</string>
	
	<string name="new_game_title">Difficulty</string>
	<string name="easy_label">Easy</string>
	<string name="medium_label">Medium</string>
	<string name="hard_label">Hard</string>

    


</resources>